# PAutoDock

./: .flake8  .gitignore  .pre-commit-config.yaml  Readme.md  Readme.txt  pyproject.toml
.github/workflows/: pytest.yml  release_to_pypi.yml
data/: example.mol2
data/3EML/: dataset.mol2  dataset.smi  ligand.pdbqt  rec.pdbqt  screening_results.csv
data/3EML/example_calculation/CPCPX/: CPCPX.mol2  CPCPX.pdbqt  dock_confs_CPCPX.pdbqt  vina_log.txt
data/3EML/example_calculation/Caffeine/: Caffeine.mol2  Caffeine.pdbqt  dock_confs_Caffeine.pdbqt  vina_log.txt
data/3EML/example_calculation/SCH442416/: SCH442416.mol2  SCH442416.pdbqt  dock_confs_SCH442416.pdbqt  vina_log.txt
data/3EML/example_calculation/Theophylline/: Theophylline.mol2  Theophylline.pdbqt  dock_confs_Theophylline.pdbqt  vina_conf.txt  vina_log.txt
data/3EML/example_calculation/ZM-241385/: ZM-241385.mol2  ZM-241385.pdbqt  dock_confs_ZM-241385.pdbqt  vina_log.txt
pautodock/: main.py
src/: adparallel.py  main.py  molop.py  multimol2op.py  recover_output.py
src/pautodock/: __autogridmap2dx__.py  __main__.py  __recover_output__.py  adparallel.py  fileutils.py  mgltoolsinstall.py  molop.py  multimol2op.py
tests/: test_adparalle.py  test_fileutils.py  test_molop.py  test_multimol2op.py
